--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,6 +23,15 @@ spring:
     baseline-version: 0
     locations: classpath:db/migration  # Chỉ định thư mục chứa file migration
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: phananhminh124@gmail.com
+    password: MiNH.241202@
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+
 server:
   port: 8088
 
