--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,8 +26,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: phananhminh124@gmail.com
-    password: MiNH.241202@
+    username: phananhminh24@gmail.com
+    password: oqij icjr zawz hkcl
     properties:
       mail:
         smtp:
